--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ table {
 table td,
 table th {
   padding: 0.5rem;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #1d1d1d;
 }
 /* custom classes */
 .container {
